--- a/configs/5.2.8
+++ b/configs/5.2.8
@@ -337,6 +337,7 @@ CONFIG_SOC_EXYNOS5260=y
 CONFIG_SOC_EXYNOS5410=y
 CONFIG_SOC_EXYNOS5420=y
 CONFIG_SOC_EXYNOS5800=y
+CONFIG_EXYNOS_MCPM=y
 CONFIG_EXYNOS_CPU_SUSPEND=y
 CONFIG_PLAT_SAMSUNG=y
 
